[package]
name = "rust-roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8"
specs = "0.19.0"
specs-derive = "0.4.1"
crossbeam-utils="0.8.7"
rand = "0.8.5"

[workspace]
members = [
    "tutorial",
    "playground",
]
